bug fix - align login form in center and incubator home not loading on login

--- a/client/src/Incubator/IncubatorLogin/IncubatorLogin.module.css
+++ b/client/src/Incubator/IncubatorLogin/IncubatorLogin.module.css
@@ -43,3 +43,9 @@ input[type='password'] {
   color: #af273e;
   font-size: 16px;
 }
+
+.form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
